src/app/view-board/view-board.component.scss
.container {
  padding: 100px 50px;
}

.header {
  position: fixed;
  left: 250px;
  right: 50px;
  top: 100px;
}

.boards-row {
  margin-top: 40px;
  position: absolute;
}

.board {
  position: relative;
  width: 335px;
  height: 600px;
  margin-right: 40px;
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.1);
}

.board-title {
  margin: 0;
  padding: 8px 24px;
  line-height: 48px;
}

/* footer position absolute bottom 0 */

.board-footer {
  box-shadow: 0 -4px 10px 0 rgba(0, 0, 0, 0.1);
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 53px;
  padding: 0 10px;
}

.task-container {
  height: 64px;
  width: 100%;
  position: relative;
}

.marker, .delete-btn {
  position: absolute;
  width: 20px;
  height: 20px;
  top: 22px;
  left: 42px;
  border: 1px solid #A9A6AB;
  outline: none;
  border-radius: 50%;
  z-index: 1;
}

.delete-btn {
  right: 42px!important;
  top: 22px;
  left: auto;
  border: none;
}

.marker-icon, .cross-icon {
  width: 13px;
  height: 13px;
  position: absolute;
  top: 2px;
  left: 3px;
}

.cross-icon {
  top: 0;
  width: 19px;
  height: 19px;
}

.task {
  position: relative;
  width: 285px;
  height: 48px;
  border: thin solid #A9A6AB;
  padding-left: 54px;
  border-radius: 5px;
}

.send-input {
  width: 253px;
  height: 30px;
  outline: none;
  border: 1px solid #A9A6AB;
  border-radius: 20px;
  padding: 4px 20px;
  margin-right: 10px;
  transition: 0.4s;
  font-size: 16px;
}

.send-input:focus, .send-input:hover {
  border-color: #20A6FC;
}

.send-button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  outline: none;
  border: 1px solid #A9A6AB;
  width: 40px;
  height: 40px;
  padding: 1px 7px 2px;
  border-radius: 50%;
  transition: 0.4s;
}

.send-button:hover {
  background-color: #20A6FC;
  border-color: #20A6FC;
}

.icon {
  display: block;
  width: 15px;
  height: 15px;
  transition: 0.4s;
}

.icon path {
  transition: 0.4s;
}

.send-button:hover .icon path {
  fill: #f9f9f9;
}

